Day4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
  namespace: murali-ns
spec: 
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80  # svc port number its our wish
      targetPort: 3000  # container port number
  type: ClusterIP



  # commands
  22152  kubectl get svc -n murali-ns
22153  kubectl apply -f service.yaml 
22154  kubectl get svc -n murali-ns
22155  ls
22156  cd rajesh
22157  kubectl describe svc ipl-svc -n murali-ns

# svc type nodeport

---

apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
  namespace: murali-ns
spec: 
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80  # svc port number its our wish
      targetPort: 3000  # container port number
      nodePort: 30080 # nodeport
  type: NodePort

---

# svc type Load Balacner

apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
  namespace: murali-ns
spec: 
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80  # svc port number its our wish
      targetPort: 3000  # container port number
  type: LoadBalancer

---

# svc type ExternalName

apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
  namespace: murali-ns
spec: 
  selector:
    app: ipl
  ports:
    - protocol: TCP
      externalName: flipkart.com,  amazon.com,  chatgpt.com
  type: ExternalName
